Complete pages and link to index

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <Title>Food Recipes</Title>
+
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/guacamole.html">Guacamole</a>
         <a href="recipes/buffalo-chicken-dip.html">Buffalo Chicken Dip</a>
+        <a href="recipes/chili.html">Chili</a>
+        <a href="recipes/seven-layer-taco-dip.html">Seven-Layer Taco Dip</a>
     </body>
 </html>
