--- a/recipes/buffalo-chicken-dip.html
+++ b/recipes/buffalo-chicken-dip.html
@@ -9,14 +9,22 @@
         <h1>Buffalo Chicken Dip</h1>
         <img src="https://www.allrecipes.com/thmb/4ozdakmOSEXheoY9HNGE7-gQyuc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/68461-buffalo-chicken-dip-recipe-id-required-lol-608515-4x3-1-e1a9f85cdeaa4c4b830668d8cf4fa67d.jpg" alt="Cheesy Buffalo Chicke Dip with Chips and Crudite">
         <h3>Description</h3>
-        <p>(Insert Description Here)</p>
+        <p>Few appetizers bring a crowd together quite like warm, ooey-gooey, utterly irresistible Buffalo chicken dip. The Allrecipes community can't get enough of this easy Buffalo chicken dip with canned chicken — it has more than 4,000 rave reviews from happy home cooks. Find out what all the fuss is about with this top-rated recipe. (Taken from www.allrecipes.com)</p>
         <h3>Ingredients</h3>
         <ul>
-            <li>Chicken Breast</li>
+            <li>Canned Chicken (Chunks)</li>
+            <li>Hot Pepper Sauce</li>
+            <li>Cream Cheese</li>
+            <li>Ranch Dressing</li>
+            <li>Celery</li>
+            <li>Chicken-flavored Crackers</li>
         </ul>
         <h3>Steps</h3>
         <ol>
-            <li> </li>
+            <li>Heat chicken and hot pepper sauce in a skillet over medium heat until heated through, 3 to 5 minutes. Stir in cream cheese and ranch dressing. Cook and stir until well blended and warm, 3 to 5 minutes.</li>
+            <li>Mix in 1/2 of the Cheddar cheese, and transfer the mixture to a slow cooker. Sprinkle the remaining cheese over top.</li>
+            <li>Cover and cook on Low until dip is hot and bubbly, about 35 minutes.</li>
+            <li>Serve with celery sticks and crackers.</li>
         </ol>
     </body>
 </html>
