--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -7,16 +7,24 @@
 
     <Body>
         <h1>Guacamole</h1>
-        <img src="https://www.allrecipes.com/thmb/cKFHrBFFmZ2ItMQ32NItV4JsPHU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/14231_guacamole_Rita-1x1-1-6797bd34d19b4f88a210f2086ca1156f.jpg">"
+        <img src="https://www.allrecipes.com/thmb/cKFHrBFFmZ2ItMQ32NItV4JsPHU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/14231_guacamole_Rita-1x1-1-6797bd34d19b4f88a210f2086ca1156f.jpg" alt ="guacamole">
         <h3>Description</h3>
-        <p>(Insert description here)</p>
+        <p>Restaurant-worthy guacamole is just a few ingredients away. You'll be surprised how easy it is to make this top-rated guacamole recipe. You'll come back to it again and again! (Taken from www.allrecipes.com)</p>
         <h3>Ingredients</h3>
         <ul>
             <li>Avocado</li>
+            <li>Lime</li>
+            <li>Salt</li>
+            <li>Roma Tomatoes</li>
+            <li>Red Onion</li>
+            <li>Cilantro</li>
+            <li>Garlic</li>
+            <li>Cayenne Pepper</li>
         </ul>
         <h3>Steps</h3>
         <ol>
-            <li>Prepare Ingredients</li>
+            <li>Mash avocados, lime juice, and salt together in a medium bowl; mix in tomatoes, onion, cilantro, and garlic. Stir in cayenne pepper.</li>
+            <li>Serve immediately, or cover and refrigerate for 1 hour for improved flavor.</li>
         </ol>
     </Body>
 </html>
