Draft style.css and link pages

--- a/recipes/seven-layer-taco-dip.html
+++ b/recipes/seven-layer-taco-dip.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Seven-Layer Taco Dip</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Seven-Layer Taco Dip</h1>
