--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <Title>Food Recipes</Title>
-
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
