--- a/recipes/buffalo-chicken-dip.html
+++ b/recipes/buffalo-chicken-dip.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Buffalo Chicken Dip</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
