--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <Title>Guacamole</Title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <Body>
