--- a/index.html
+++ b/index.html
@@ -7,10 +7,55 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/guacamole.html">Guacamole</a>
-        <a href="recipes/buffalo-chicken-dip.html">Buffalo Chicken Dip</a>
-        <a href="recipes/chili.html">Chili</a>
-        <a href="recipes/seven-layer-taco-dip.html">Seven-Layer Taco Dip</a>
+        <div class="header">
+        </div>
+
+        <div class="main">
+            <h1>Odin Recipes</h1>
+            <div class="recipe-container">
+                <div class="recipe-card" id="1">
+                    <a href="recipes/guacamole.html">
+                    <div class="image" id="guac"></div>
+                    <div class="details">
+                    <h2>Guacamole</h2>
+                    <p class="recipe-description">eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper eget duis at tellus at urna condimentum mattis pellentesque id nibh</p>
+                    </div>
+                    </a>
+                </div>
+                <div class="recipe-card" id="2">
+                    <a href="recipes/buffalo-chicken-dip.html">
+                    <div class="image" id="bcdip"></div>
+                    <div class="details">
+                    <h2>Buffalo Chicken Dip</h2>
+                    <p class="recipe-description">eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper eget duis at tellus at urna condimentum mattis pellentesque id nibh</p>
+                    </div>
+                    </a>
+                </div>
+                <div class="recipe-card" id="3">
+                    <a href="recipes/chili.html">
+                    <div class="image" id="chili"></div>
+                    <div class="details">
+                    <h2>Chili</h2>
+                    <p class="recipe-description">eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper eget duis at tellus at urna condimentum mattis pellentesque id nibh</p>
+                    </div>
+                    </a>
+                </div>
+                <div class="recipe-card" id="4">
+                    <a href="recipes/seven-layer-taco-dip.html">
+                    <div class="image" id="sltdip"></div>
+                    <div class="details">
+                    <h2>Seven-Layer Taco Dip</h2>
+                    <p class="recipe-description">eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper eget duis at tellus at urna condimentum mattis pellentesque id nibh</p>
+                    </div>
+                    </a>
+                </div>
+            </div>    
+        </div>
+
+        <div class="footer">
+            <p class="footer">Designed by: Mark Bernardo</p>
+        </div>
+
+
     </body>
 </html>
